# Superposition_clean

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experiments/: 01_superposition_emergence.py  02_feature_geometry.py  02_phase_diagram.py  03_feature_geometry.py  03_phase_diagram.py  _common.py
src/superposition/: __init__.py  data.py  metrics.py  model.py  train.py  viz.py
tests/: conftest.py  test_basic.py
